[tool.poetry]
name = "hazel-db"
version = "0.1.2"
description = "A library which eases integrating SQLAlchemy into a project"
authors = ["Abdul-Hakeem Shaibu <hkmshb@gmail.com>"]
keywords = ["hazel", "sqlalchemy", "database", "db"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.2"
"zope.sqlalchemy" = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
pytest-cov = "^2.6"
